<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3e225d7f"
    >

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="true"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:allowUndo="true"
        android:height="60sp"
        android:background="#F08C35"
        android:layout_marginBottom="5dp"
        android:onClick="spotify"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:allowUndo="true"
        android:height="60sp"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="scoresApp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:allowUndo="true"
        android:height="60sp"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="libraryApp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:allowUndo="true"
        android:height="60sp"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="buildItBigger"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:allowUndo="true"
        android:height="60sp"
        android:background="#F08C35"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="xyzReader"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:allowUndo="true"
        android:height="60sp"
        android:background="#be1140"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:onClick="capstone"
        />

</LinearLayout>

</ScrollView>